<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/defaultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/kk_icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="24dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/str_forgot_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="14dp"
            android:textColor="#000000"
            android:text="@string/str_reset_password" />

        <EditText
            android:id="@+id/forgotEmailEditTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/kk_bottomsheet_edittext_rect"
            android:hint="@string/str_email_hint"/>

        <Button
            android:id="@+id/sendLinkButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:enabled="false"
            android:background="@drawable/kk_selector_bottomsheet_login_btn"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:text="@string/str_send_link"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/successView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/successBackImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/kk_icon_back"/>

        <ImageView
            android:layout_width="208dp"
            android:layout_height="208dp"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/kk_mail_completed_img"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:textSize="21dp"
            android:textColor="#000000"
            android:lineSpacingExtra="5dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/str_reset_link" />

        <TextView
            android:id="@+id/succesEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:textColor="#828282"
            android:lineSpacingExtra="5dp"
            android:layout_gravity="center_horizontal"
            tools:text="[ smshin@krosskomics.com ]" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:enabled="false"
            android:background="@drawable/kk_bottomsheet_login_rect_enable"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:text="@string/str_ok"/>

    </LinearLayout>

</FrameLayout>